--> Basic Navigation Drawer Completed --> Designing to be done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Vehicle Rental</string>
+    <string name="nav_bikeList">View Bikes</string>
+    <string name="nav_booking">My Bookings</string>
+    <string name="nav_aboutUs">About Us</string>
 </resources>
